--- a/package.json
+++ b/package.json
@@ -3,6 +3,16 @@
   "version": "1.0.0-alpha1",
   "description": "A d3 based timeline visualization kibana plugin.",
   "main": "index.js",
+  "homepage": "https://github.com/elastic/kibana-milestones-vis",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/elastic/kibana-milestones-vis.git"
+  },
+  "bugs": {
+    "url": "https://github.com/elastic/kibana-milestones-vis/issues"
+  },
+  "private": true,
+  "author": "Elastic",
   "license": "UNLICENSED",
   "kibana": {
     "version": "7.0.0-alpha1",
