--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
   },
   "devDependencies": {
     "@elastic/eslint-config-kibana": "^0.6.1",
-    "@elastic/plugin-helpers": "^7.0.0",
+    "@elastic/plugin-helpers": "^9.0.0",
     "babel-eslint": "^7.2.3",
     "eslint": "^3.19.0",
     "eslint-plugin-babel": "^4.1.1",
@@ -40,7 +40,7 @@
   },
   "dependencies": {
     "d3": "3.5.6",
-    "milestones": "github:elastic/milestones#v1.0.0-alpha4",
+    "d3-milestones": "1.0.0-alpha7",
     "lodash": "3.10.1"
   }
 }
