--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "author": "Elastic",
   "license": "UNLICENSED",
   "kibana": {
-    "version": "7.0.0-alpha1",
+    "version": "6.1.1",
     "templateVersion": "7.2.2"
   },
   "scripts": {
@@ -28,15 +28,15 @@
     "gather-info": "node gather-info.js"
   },
   "devDependencies": {
-    "@elastic/eslint-config-kibana": "^0.6.1",
-    "@elastic/plugin-helpers": "^9.0.0",
-    "babel-eslint": "^7.2.3",
-    "eslint": "^3.19.0",
-    "eslint-plugin-babel": "^4.1.1",
-    "eslint-plugin-import": "^2.3.0",
-    "eslint-plugin-mocha": "^4.9.0",
-    "eslint-plugin-react": "^7.0.1",
-    "expect.js": "^0.3.1"
+    "@elastic/eslint-config-kibana": "0.13.0",
+    "@elastic/plugin-helpers": "7.1.3",
+    "babel-eslint": "7.2.3",
+    "eslint": "3.19.0",
+    "eslint-plugin-babel": "4.1.1",
+    "eslint-plugin-import": "2.3.0",
+    "eslint-plugin-mocha": "4.9.0",
+    "eslint-plugin-react": "7.3.0",
+    "expect.js": "0.3.1"
   },
   "dependencies": {
     "d3": "3.5.6",
