--- a/package.json
+++ b/package.json
@@ -16,28 +16,31 @@
     "Walter Rafelsberger <walter.rafelsberger@elastic.co>"
   ],
   "kibana": {
-    "version": "6.2.0",
-    "templateVersion": "7.2.2"
+    "version": "6.3.0",
+    "templateVersion": "1.0.0"
   },
   "scripts": {
-    "lint": "eslint",
+    "preinstall": "node ../../kibana/preinstall_check",
+    "kbn": "node ../../kibana/scripts/kbn",
+    "lint": "eslint **/*.js",
     "start": "plugin-helpers start",
     "test:server": "plugin-helpers test:server",
     "test:browser": "plugin-helpers test:browser",
-    "build": "plugin-helpers build",
-    "postinstall": "plugin-helpers postinstall",
-    "gather-info": "node gather-info.js"
+    "build": "plugin-helpers build"
   },
   "devDependencies": {
-    "@elastic/eslint-config-kibana": "0.13.0",
-    "@elastic/plugin-helpers": "7.1.3",
-    "babel-eslint": "7.2.3",
-    "eslint": "3.19.0",
-    "eslint-plugin-babel": "4.1.1",
-    "eslint-plugin-import": "2.3.0",
-    "eslint-plugin-mocha": "4.9.0",
-    "eslint-plugin-react": "7.3.0",
-    "expect.js": "0.3.1"
+    "@elastic/eslint-config-kibana": "link:../../kibana/packages/eslint-config-kibana",
+    "@elastic/eslint-import-resolver-kibana": "^0.9.0",
+    "@kbn/plugin-helpers": "link:../../kibana/packages/kbn-plugin-helpers",
+    "babel-eslint": "^8.0.2",
+    "eslint": "^4.11.0",
+    "eslint-plugin-babel": "^4.1.1",
+    "eslint-plugin-import": "^2.3.0",
+    "eslint-plugin-jest": "^21.3.2",
+    "eslint-plugin-mocha": "^4.9.0",
+    "eslint-plugin-prefer-object-spread": "^1.2.1",
+    "eslint-plugin-react": "^7.0.1",
+    "expect.js": "^0.3.1"
   },
   "dependencies": {
     "d3": "3.5.6",
