--- a/package.json
+++ b/package.json
@@ -38,13 +38,13 @@
     "eslint-plugin-import": "^2.3.0",
     "eslint-plugin-jest": "^21.3.2",
     "eslint-plugin-mocha": "^4.9.0",
+    "eslint-plugin-no-unsanitized": "^3.0.2",
     "eslint-plugin-prefer-object-spread": "^1.2.1",
     "eslint-plugin-react": "^7.0.1",
     "expect.js": "^0.3.1"
   },
   "dependencies": {
     "d3": "3.5.6",
-    "d3-milestones": "1.0.0-alpha12",
-    "lodash": "3.10.1"
+    "d3-milestones": "1.0.0-alpha12"
   }
 }
