--- a/package.json
+++ b/package.json
@@ -46,5 +46,9 @@
   "dependencies": {
     "d3": "3.5.6",
     "d3-milestones": "1.0.0-alpha12"
+  },
+  "resolutions": {
+    "fstream": "^1.0.12",
+    "js-yaml": "^3.13.1"
   }
 }
