--- a/package.json
+++ b/package.json
@@ -48,7 +48,9 @@
     "d3-milestones": "1.0.0-alpha14"
   },
   "resolutions": {
+    "eslint-utils": "^1.4.1",
     "fstream": "^1.0.12",
-    "js-yaml": "^3.13.1"
+    "js-yaml": "^3.13.1",
+    "lodash": "^4.17.13"
   }
 }
