--- a/.eslintrc
+++ b/.eslintrc
@@ -4,4 +4,4 @@ extends: "@elastic/kibana"
 settings:
   import/resolver:
     '@elastic/eslint-import-resolver-kibana':
-      rootPackageName: 'kibana-milestones-vis'
+      rootPackageName: 'kibana_milestones_vis'
