--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "kibana_milestones_vis",
   "version": "7.4.0",
   "description": "A d3 based timeline visualization kibana plugin.",
-  "main": "index.ts",
+  "main": "index.js",
   "homepage": "https://github.com/walterra/kibana-milestones-vis",
   "repository": {
     "type": "git",
@@ -34,24 +34,26 @@
     "@elastic/eslint-import-resolver-kibana": "link:../../packages/kbn-eslint-import-resolver-kibana",
     "@kbn/expect": "link:../../packages/kbn-expect",
     "@kbn/plugin-helpers": "link:../../packages/kbn-plugin-helpers",
-    "@typescript-eslint/eslint-plugin": "1.13.0",
-    "@typescript-eslint/parser": "1.13.0",
     "babel-eslint": "^10.0.1",
     "eslint": "^5.16.0",
-    "eslint-config-prettier": "6.1.0",
+    "eslint-config-prettier": "^6.1.0",
     "eslint-plugin-babel": "^5.3.0",
-    "eslint-plugin-import": "^2.16.0",
-    "eslint-plugin-jest": "^22.4.1",
-    "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-ban": "1.2.0",
+    "eslint-plugin-import": "2.18.2",
+    "eslint-plugin-jest": "22.7.1",
+    "eslint-plugin-jsx-a11y": "6.2.3",
     "eslint-plugin-mocha": "^5.3.0",
     "eslint-plugin-no-unsanitized": "^3.0.2",
+    "eslint-plugin-node": "9.1.0",
     "eslint-plugin-prefer-object-spread": "^1.2.1",
-    "eslint-plugin-prettier": "3.1.0",
-    "eslint-plugin-react": "^7.12.4",
+    "eslint-plugin-prettier": "^3.1.0",
+    "eslint-plugin-react": "^7.13.0",
+    "eslint-plugin-react-hooks": "1.6.0",
     "prettier": "1.18.2",
     "typescript": "3.5.3"
   },
   "dependencies": {
+    "@elastic/eui": "^5.0.1",
     "d3": "3.5.6",
     "d3-milestones": "1.0.0-alpha14"
   },
