--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
   },
   "dependencies": {
     "d3": "3.5.6",
-    "d3-milestones": "1.0.0-alpha14"
+    "d3-milestones": "^1.1.0"
   },
   "engines": {
     "node": "10.15.2",
