--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "Walter Rafelsberger <walter.rafelsberger@elastic.co>"
   ],
   "kibana": {
-    "version": "7.6.0",
+    "version": "7.7.0",
     "templateVersion": "1.0.0"
   },
   "scripts": {
@@ -50,14 +50,15 @@
     "eslint-plugin-react": "^7.13.0",
     "eslint-plugin-react-hooks": "1.6.0",
     "prettier": "1.18.2",
-    "typescript": "3.5.3"
+    "typescript": "3.5.3",
+    "ui-select": "0.19.8"
   },
   "dependencies": {
     "d3": "3.5.6",
     "d3-milestones": "^1.1.0"
   },
   "engines": {
-    "node": "10.18.0",
+    "node": "10.19.0",
     "yarn": "^1.21.1"
   }
 }
