--- a/package.json
+++ b/package.json
@@ -30,28 +30,8 @@
     "build": "plugin-helpers build"
   },
   "devDependencies": {
-    "@elastic/eslint-config-kibana": "link:../../packages/eslint-config-kibana",
-    "@elastic/eslint-import-resolver-kibana": "link:../../packages/kbn-eslint-import-resolver-kibana",
-    "@kbn/expect": "link:../../packages/kbn-expect",
     "@kbn/plugin-helpers": "link:../../packages/kbn-plugin-helpers",
-    "babel-eslint": "^10.0.1",
-    "eslint": "^5.16.0",
-    "eslint-config-prettier": "^6.1.0",
-    "eslint-plugin-babel": "^5.3.0",
-    "eslint-plugin-ban": "1.2.0",
-    "eslint-plugin-import": "2.18.2",
-    "eslint-plugin-jest": "22.7.1",
-    "eslint-plugin-jsx-a11y": "6.2.3",
-    "eslint-plugin-mocha": "^5.3.0",
-    "eslint-plugin-no-unsanitized": "^3.0.2",
-    "eslint-plugin-node": "9.1.0",
-    "eslint-plugin-prefer-object-spread": "^1.2.1",
-    "eslint-plugin-prettier": "^3.1.0",
-    "eslint-plugin-react": "^7.13.0",
-    "eslint-plugin-react-hooks": "1.6.0",
-    "prettier": "1.18.2",
-    "typescript": "3.5.3",
-    "ui-select": "0.19.8"
+    "typescript": "3.5.3"
   },
   "dependencies": {
     "d3": "3.5.6",
