--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "kibana_milestones_vis",
-  "version": "7.9.0",
+  "name": "kibana-milestones-vis",
+  "version": "7.10.0",
+  "private": false,
   "description": "A d3 based timeline visualization kibana plugin.",
   "main": "index.js",
   "homepage": "https://github.com/walterra/kibana-milestones-vis",
@@ -15,31 +16,14 @@
   "contributors": [
     "Walter Rafelsberger <walter.rafelsberger@elastic.co>"
   ],
-  "kibana": {
-    "version": "7.9.0",
-    "templateVersion": "1.0.0"
-  },
   "scripts": {
-    "preinstall": "node ../../preinstall_check",
-    "kbn": "node ../../scripts/kbn",
-    "es": "node ../../scripts/es",
-    "lint": "eslint .",
-    "start": "plugin-helpers start",
-    "test:server": "plugin-helpers test:server",
-    "test:browser": "plugin-helpers test:browser",
-    "build": "plugin-helpers build"
-  },
-  "devDependencies": {
-    "@kbn/plugin-helpers": "link:../../packages/kbn-plugin-helpers",
-    "typescript": "3.5.3"
+    "build": "yarn plugin-helpers build",
+    "plugin-helpers": "node ../../scripts/plugin_helpers",
+    "kbn": "node ../../scripts/kbn"
   },
   "dependencies": {
-    "d3": "3.5.6",
+    "d3": "3.5.17",
     "d3-milestones": "^1.1.0"
-  },
-  "engines": {
-    "node": "10.21.0",
-    "yarn": "^1.21.1"
   },
   "resolutions": {
     "lodash": "^4.17.21"
