--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,8 +6,10 @@
   },
   "include": [
     "index.ts",
+    "common/**/*.ts",
     "public/**/*.ts",
     "public/**/*.tsx",
+    "server/**/*.ts",
     "../../typings/**/*",
   ],
   "exclude": []
