Remove data plugin dependency.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,9 +6,14 @@
   },
   "include": [
     "index.ts",
+    "common/**/*.ts",
     "public/**/*.ts",
     "public/**/*.tsx",
+    "server/**/*.ts",
     "../../typings/**/*",
   ],
-  "exclude": []
+  "exclude": [],
+  "references": [
+    { "path": "../../src/core/tsconfig.json" }
+  ]
 }
