--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
   },
   "dependencies": {
     "d3": "3.5.17",
-    "d3-milestones": "^1.2.2"
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "react-milestones-vis": "^0.3.2-node14"
   },
   "resolutions": {
     "lodash": "^4.17.21"
