--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kibana-milestones-vis",
-  "version": "7.11.0",
+  "version": "7.12.0",
   "private": false,
   "description": "A d3 based timeline visualization kibana plugin.",
   "main": "index.js",
@@ -19,15 +19,22 @@
   "scripts": {
     "build": "yarn plugin-helpers build",
     "plugin-helpers": "node ../../scripts/plugin_helpers",
-    "kbn": "node ../../scripts/kbn"
+    "kbn": "node ../../scripts/kbn",
+    "test": "yarn jest"
   },
   "dependencies": {
     "d3": "3.5.17",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-milestones-vis": "^0.3.2-node14"
+    "react-milestones-vis": "^0.3.4-node14"
   },
   "resolutions": {
     "lodash": "^4.17.21"
+  },
+  "devDependencies": {
+    "@types/jest": "^26.0.14",
+    "jest": "^26.6.3",
+    "ts-jest": "^26.5.6",
+    "typescript": "4.1.3"
   }
 }
