--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kibana-milestones-vis",
-  "version": "7.15.0",
+  "version": "7.16.0",
   "private": false,
   "description": "A d3 based timeline visualization kibana plugin.",
   "main": "index.js",
@@ -26,7 +26,7 @@
     "d3": "3.5.17",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-milestones-vis": "^0.4.5-node14"
+    "react-milestones-vis": "^0.5.0"
   },
   "resolutions": {
     "lodash": "^4.17.21",
