--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,7 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "outDir": "./target",
-    "skipLibCheck": true
+    "outDir": "./target/types"
   },
   "include": [
     "index.ts",
@@ -14,6 +13,9 @@
   ],
   "exclude": [],
   "references": [
-    { "path": "../../src/core/tsconfig.json" }
+    { "path": "../../src/core/tsconfig.json" },
+    { "path": "../../src/plugins/data/tsconfig.json" },
+    { "path": "../../src/plugins/visualizations/tsconfig.json" },
+    { "path": "../../src/plugins/vis_default_editor/tsconfig.json" }
   ]
 }
