--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-milestones-vis": "^0.5.0"
   },
   "resolutions": {
+    "decode-uri-component": "^0.2.1",
     "lodash": "^4.17.21",
     "minimist": "^1.2.6"
   },
