--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "test": "yarn jest"
   },
   "dependencies": {
-    "d3": "3.5.17",
+    "d3-collection": "^1.0.7",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-milestones-vis": "^0.5.0"
@@ -34,6 +34,7 @@
     "minimist": "^1.2.6"
   },
   "devDependencies": {
+    "@types/d3-collection": "^1.0.7",
     "@types/jest": "^26.0.14",
     "jest": "^26.6.3",
     "ts-jest": "^26.5.6",
