--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "resolutions": {
     "decode-uri-component": "^0.2.1",
     "lodash": "^4.17.21",
+    "minimatch": "^3.0.5",
     "minimist": "^1.2.6"
   },
   "devDependencies": {
