--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   },
   "resolutions": {
     "decode-uri-component": "^0.2.1",
+    "json5": "^2.2.3",
     "lodash": "^4.17.21",
     "minimatch": "^3.0.5",
     "minimist": "^1.2.6"
